# aws-bedrock-rag-by-langchain

./: .gitignore  1_langchain_history_on_memory.py  2_langchain_history_on_dynamodb.py  3_langchain_knowledgebase.py  Dockerfile  docker-compose.yml  requirements.txt
app/: .env.sample  1_langchain_history_on_memory.py  2_langchain_history_on_dynamodb.py  3_langchain_knowledgebase.py  README.md  pyproject.toml
infra/: samconfig.toml.sample  template.yaml
